--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
