--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "database": "json-server --watch -p 4000 database.json"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
