--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "eslint-config-next": "13.4.18",
     "lucide-react": "^0.268.0",
     "next": "13.4.18",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
